--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -52,10 +53,11 @@
     "@angular-devkit/build-angular": "~0.1001.7",
     "@angular/cli": "~10.1.2",
     "@angular/compiler-cli": "~10.1.2",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "conventional-changelog-cli": "^2.1.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
