--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
+    "build:docs": "ng build example --prod",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
     "lint": "ng lint",
