--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-canvas",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "license": "MIT",
   "author": "lanxuexing",
   "description": "A simple yet powerful canvas component for Angular (>=2) 🚀",
@@ -30,7 +30,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "build:docs": "ng build example --prod",
+    "build:docs": "ng build example --prod --base-href /ngx-canvas/",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
     "lint": "ng lint",
