--- a/projects/ngx-canvas/package.json
+++ b/projects/ngx-canvas/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-canvas",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "license": "MIT",
   "author": "lanxuexing",
   "description": "A simple yet powerful canvas component for Angular (>=2) 🚀",
@@ -9,6 +9,8 @@
     "url": "git+https://github.com/lanxuexing/ngx-canvas.git"
   },
   "keywords": [
+    "ngx-canvas",
+    "ngx",
     "canvas",
     "canvas poster",
     "plugin",
