--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build:prod": "ng build --prod",
-    "build:docs": "ng build example --prod --base-href /ngx-canvas/",
+    "build:docs": "ng build --prod && ng build example --prod --base-href /ngx-canvas/",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
     "lint": "ng lint",
